# smart-switches/site/src/api/models/ListBLEDevicesResponseBody.ts
@@ -1,61 +1,0 @@
-/**
- * Smart Switches
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * OpenAPI spec version: 
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { Device } from '../models/Device';
-import { HttpFile } from '../http/http';
-
-export class ListBLEDevicesResponseBody {
-    /**
-    * A URL to the JSON Schema for this object.
-    */
-    'schema'?: string;
-    'count': number;
-    'devices': { [key: string]: Device; };
-    'scanning': boolean;
-
-    static readonly discriminator: string | undefined = undefined;
-
-    static readonly mapping: {[index: string]: string} | undefined = undefined;
-
-    static readonly attributeTypeMap: Array<{name: string, baseName: string, type: string, format: string}> = [
-        {
-            "name": "schema",
-            "baseName": "$schema",
-            "type": "string",
-            "format": "uri"
-        },
-        {
-            "name": "count",
-            "baseName": "count",
-            "type": "number",
-            "format": "int64"
-        },
-        {
-            "name": "devices",
-            "baseName": "devices",
-            "type": "{ [key: string]: Device; }",
-            "format": ""
-        },
-        {
-            "name": "scanning",
-            "baseName": "scanning",
-            "type": "boolean",
-            "format": ""
-        }    ];
-
-    static getAttributeTypeMap() {
-        return ListBLEDevicesResponseBody.attributeTypeMap;
-    }
-
-    public constructor() {
-    }
-}
